# AI-Business-OS

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json
services/api/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_identity_foundation.py
services/api/src/: __init__.py
services/api/src/core/: __init__.py  deps.py
services/api/src/core/cache/: __init__.py  redis.py
services/api/src/core/config/: __init__.py  settings.py
services/api/src/core/context/: __init__.py  tenant.py
services/api/src/core/db/: __init__.py  enums.py  mixins.py  session.py
services/api/src/core/errors/: __init__.py  exceptions.py  handlers.py
services/api/src/core/health/: __init__.py  router.py
services/api/src/core/logging/: __init__.py  setup.py
services/api/src/core/middleware/: __init__.py  request_context.py
services/api/src/core/security/: __init__.py  jwt.py  password.py
services/api/src/main/: __init__.py  __main__.py  app.py
services/api/src/modules/: __init__.py
services/api/src/modules/identity/: __init__.py
services/api/src/modules/identity/api/: __init__.py  dependencies.py  router.py
services/api/src/modules/identity/api/routers/: __init__.py  auth.py  organizations.py  (+1 more)
services/api/src/modules/identity/models/: __init__.py  organization.py  permission.py  refresh_token.py  role.py  role_permission.py  user.py
services/api/src/modules/identity/repositories/: __init__.py  base.py  organization.py  refresh_token.py  role.py  user.py
services/api/src/modules/identity/schemas/: __init__.py  auth.py
services/api/src/modules/identity/services/: __init__.py  auth_service.py  token_service.py
services/api/tests/: conftest.py
services/api/tests/api/: __init__.py  conftest.py  test_auth_api.py
services/api/tests/integration/: test_auth_flow.py  test_health.py
services/api/tests/repository/: __init__.py  conftest.py  test_organization_repository.py  test_user_repository.py
services/api/tests/service/: __init__.py  test_auth_service.py
services/api/tests/unit/: test_auth_helpers.py  test_config.py  test_errors.py  test_jwt.py  test_password.py
(+39 files in other folders)
