[project]
name = "ai-bos-api"
version = "0.1.0"
description = "AI Business Operating System — API service"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "fastapi==0.115.6",
    "starlette==0.41.3",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "redis==5.2.1",
    "structlog==24.4.0",
    "httpx==0.28.1",
    "argon2-cffi==23.1.0",
    "pyjwt==2.10.1",
    "email-validator==2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
    "mypy==1.14.0",
    "types-redis==4.6.0.20241004",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "S101",  # assert
    "S104",  # 0.0.0.0 binding for Docker/FastAPI
    "S105",  # hardcoded password string
    "S106",  # password function arguments
    "B008",  # FastAPI Depends()
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"migrations/**/*.py" = ["N999"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
mypy_path = "."
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
